# portal

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_win.bat
src/: index.html  jurt.h  main.c  miniargparse.h  nukshow.h  web.h
src/libportal/: libportal.c  libportal.h
tool/: bin2c.c  bin2c.lua
